--- a/packages/ide/src/app/dialog-about/dialog-about.component.html
+++ b/packages/ide/src/app/dialog-about/dialog-about.component.html
@@ -1,14 +1,9 @@
 <mat-dialog-content>
-  <button class="close-btn" mat-dialog-close mat-icon-button aria-label="Fechar diálogo">
+  <button class="close-btn" mat-dialog-close mat-icon-button aria-label="Fechar diálogo" type="button">
     <svg-icon src="assets/mdi/close.svg" svgAriaLabel="Ícone de fechar diálogo" />
   </button>
 
   <svg-icon src="assets/logo/default.svg" class="logo" alt="Logo do Portugol Studio" />
-
-  <!-- <div class="app-info">
-    <span class="app-name">Portugol Webstudio</span>
-    <span class="app-version">Versão %COMMIT_SHA%</span>
-  </div> -->
 
   <div class="app-about">
     O Portugol Webstudio é um ambiente de desenvolvimento integrado (IDE) online para a linguagem de programação
