--- a/packages/ide/src/app/new-version-available/new-version-available.component.html
+++ b/packages/ide/src/app/new-version-available/new-version-available.component.html
@@ -4,6 +4,6 @@
 <p>Quando estiver pronto, basta atualizar a página ou clicar no botão abaixo.</p>
 
 <div class="buttons">
-  <button mat-raised-button color="primary" (click)="onReload()" type="button">Atualizar</button>
-  <button mat-button color="primary" (click)="onIgnore()" type="button">Ignorar</button>
+  <button mat-raised-button color="primary" type="button" (click)="onReload()">Atualizar</button>
+  <button mat-button color="primary" type="button" (click)="onIgnore()">Ignorar</button>
 </div>
