Corrigir erro de tipo

--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -1,7 +1,7 @@
 <svg-icon svgClass="logo w-100" svgAriaLabel="Logomarca do Portugol Webstudio" [src]="logo" />
 
 <nav>
-  <button mat-ripple type="button" (click)="newTab.emit()">
+  <button mat-ripple type="button" (click)="newTab.emit(undefined)">
     <svg-icon src="assets/mdi/file-plus-outline.svg" svgClass="text-secondary" svgAriaLabel="Ícone de novo arquivo" />
     <span>Novo Arquivo</span>
   </button>
