Remover ngSwitchCase desnecessário Fixes PORTUGOL-WEBSTUDIO-6V4

--- a/packages/ide/src/app/dialog-open-example/dialog-open-example.component.html
+++ b/packages/ide/src/app/dialog-open-example/dialog-open-example.component.html
@@ -8,7 +8,7 @@
 
 <main mat-dialog-content>
   @if (loading) {
-    <mat-spinner *ngSwitchCase="true" [diameter]="50" />
+    <mat-spinner [diameter]="50" />
   } @else {
     <as-split [direction]="isBelowMd ? 'vertical' : 'horizontal'">
       <as-split-area [size]="40">
